# ProjetSacAdos

./: CMakeLists.txt  README.md  cheminInstance.txt
instances2/large_scale/: knapPI_1_10000_1000_1.in  knapPI_1_1000_1000_1.in  knapPI_1_100_1000_1.in  knapPI_1_2000_1000_1.in  knapPI_1_5000_1000_1.in  knapPI_1_500_1000_1.in  knapPI_2_10000_1000_1.in  knapPI_2_1000_1000_1.in  knapPI_2_100_1000_1.in  knapPI_2_2000_1000_1.in  knapPI_2_200_1000_1.in  knapPI_2_5000_1000_1.in  knapPI_2_500_1000_1.in  knapPI_3_10000_1000_1.in  knapPI_3_1000_1000_1.in  knapPI_3_100_1000_1.in  knapPI_3_2000_1000_1.in  knapPI_3_200_1000_1.in  knapPI_3_5000_1000_1.in  knapPI_3_500_1000_1.in
instances2/low-dimensional/: f10_l-d_kp_20_879.in  f1_l-d_kp_10_269.in  f2_l-d_kp_20_878.in  f3_l-d_kp_4_20.in  f4_l-d_kp_4_11.in  f5_l-d_kp_15_375.in  f6_l-d_kp_10_60.in  f8_l-d_kp_23_10000.in  f9_l-d_kp_5_80.in
nouveauInstance/hardinstances_pisinger/: knapPI_11_20_1000.in  knapPI_11_20_1000.in.in
output/: result.csv
results/: caracteristics.csv  experience1.py  experience2.py  temps_calcul.csv  testV0.csv  testV1.csv  testV2.csv  v0V1_a.csv  v0V1_b.csv  v1V2_a.csv  v1V2_b.csv  v1Vbis.csv  v1Vbis_b.csv  validation_theorique.py  visualisation_matrices.py
src/: KpDefs.hpp  KpSolver.cpp  KpSolver.hpp  KpSolverBB.cpp  KpSolverBB.hpp  KpSolverDP.cpp  KpSolverDP.hpp  KpSolverGreedy.cpp  KpSolverGreedy.hpp  KpSolverHeurDP.cpp  KpSolverHeurDP.hpp  MatDP.cpp  MatDP.hpp  Test.cpp  a.out  kpSolverBB.cpp  kpSolverBB.hpp  nodeBB.cpp  nodeBB.hpp  option.txt  parser.cpp  parser.hpp  scriptBash.sh  selectionFile.cpp  selectionFile.hpp  versionSolver.hpp
